# kafka-rust-example

./: .gitignore  .rusty-hook.toml  Cargo.toml  LICENSE  Makefile  README.md  alembic.ini  build.rs  docker-compose.yml  rustfmt.toml
.github/workflows/: linters.yml  linux.yml
alembic/: env.py
alembic/versions/: 8b283b5568cf_create_metrics_table.py
config/: env.dev
examples/: simple.rs
migrations/: 20210418201409_create_metrics_table.sql  20210418201824_create_extension_tsdb.sql  20210418201855_create_composite_index.sql  20210418201918_create_hypertable.sql
src/: config.rs  errors.rs  main.rs  metrics.rs
src/agents/: agent.rs  metrics_writer.rs  mod.rs  stdout_writer.rs
src/data/: message.proto
src/kafka/: consumer.rs  mod.rs  producer.rs
src/postgres/: client.rs  mod.rs
