[package]
authors = ["Ankur Srivastava <ankur.srivastava@email.de>"]
categories = ["category keywords"]
description = "Write some description for your project here."
documentation = "https://docs.rs/kafka-rust-example"
edition = "2018"
homepage = "https://github.com/ansrivas/kafka-rust-example"
keywords = ["some-awesome-keywords"]
license = "mit"
name = "kafka_rust_example"
readme = "README.md"
repository = "https://github.com/ansrivas/kafka-rust-example"
version = "0.1.0"
[[bin]]
name = "kafka-rust-example"
path = "src/main.rs"

[build-dependencies]
prost-build = "0.8.0"

[dependencies]
anyhow = "1.0"
deadpool-postgres = "0.9.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
envy = "0.4.2"
log = "0.4.14"
serde = "1.0"
serde_json = "1.0"
structopt = "0.3.23"
sysinfo = "0.20.3"
thiserror = "1.0"
rustls = "*"
tokio-postgres-rustls = "0.8.0"
uuid = { version = "0.8.2", features = ["v4"] }
prost = "0.8.0"
futures = "0.3.17"


[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.rdkafka]
features = ["cmake-build", "libz-static", "gssapi-vendored", "ssl-vendored", "tokio"]
version = "0.26.0"
# git = "https://github.com/fede1024/rust-rdkafka"
# rev = "8da55e2c58752d75babb800edc0162b519dd84e2"

[dependencies.tokio]
features = ["rt-multi-thread", "macros", "io-util"]
version = "1.11.0"

[dependencies.tokio-postgres]
features = ["with-chrono-0_4"]
version = "0.7.2"
