[package]
authors = ["Ankur Srivastava <ankur.srivastava@email.de>"]
categories = ["category keywords"]
description = "Write some description for your project here."
documentation = "https://docs.rs/kafka-rust-example"
edition = "2018"
homepage = "https://github.com/ansrivas/kafka-rust-example"
keywords = ["some-awesome-keywords"]
license = "mit"
name = "kafka_rust_example"
readme = "README.md"
repository = "https://github.com/ansrivas/kafka-rust-example"
version = "0.1.0"
[[bin]]
name = "kafka-rust-example"
path = "src/main.rs"

[build-dependencies]
prost-build = "0.10.3"

[dependencies]
anyhow = "1.0.44"
deadpool-postgres = "0.10.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
envy = "0.4.2"
log = "0.4.14"
serde = "1.0.130"
serde_json = "1.0.67"
structopt = "0.3.23"
sysinfo = "0.26.6"
thiserror = "1.0.29"
postgres-native-tls = "0.5.0"
native-tls = "0.2.8"
# openssl = { version = "0.10", features = ["vendored"] }
uuid = { version = "1.0.0", features = ["v4"] }
prost = "0.10.3"
futures = "0.3.17"
# git = "https://github.com/danburkert/prost"
# rev = "423f5ec5bd165a7007a388edfb2b485d5bbf40c7"


[dependencies.chrono]
features = ["serde"]
version = "0.4.19"

[dependencies.rdkafka]
features = ["cmake-build", "gssapi", "ssl", "tokio"]
version = "0.28.0"
# git = "https://github.com/fede1024/rust-rdkafka"
# rev = "8da55e2c58752d75babb800edc0162b519dd84e2"

[dependencies.tokio]
features = ["rt-multi-thread", "macros", "io-util"]
version = "1.11.0"

[dependencies.tokio-postgres]
features = ["with-chrono-0_4"]
version = "0.7.2"


[dev-dependencies]
rusty-hook = "^0.11.2"
